src/objects/jiffle__Attendee__c.object
<CustomObject>
    <description>Used to store Jifflenow Attendees as a master table.</description>
    <fields>
        <fullName>jiffle__Attendee_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_UUID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Attendee UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Mobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__User_Role__c</fullName>
        <description>User role - Requestor/Attendee</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__User_Type__c</fullName>
        <description>User type - internal or external user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Attendee_First_Name__c</columns>
        <columns>jiffle__Attendee_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JA-{0000}</displayFormat>
        <label>Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>